# Nutrition_Bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  structure.txt
.github/workflows/: ci.yml  release.yml
agent_workflow/: workflow.py
agent_workflow/tools/: rag.py
agents/: agent_state.py  agent_steps.py  guard.py
core/: __init__.py  async_utils.py  cache.py  config.py  evaluation.py  logging_config.py  metrics.py  rate_limiter.py  refinement.py  retriever.py  routing.py  validation.py
hyp_question_db/table/: chroma.sqlite3
hyp_question_db/text/: chroma.sqlite3
mem0ai/: client.py
parsers/: llama_parser.py
pipeline/: ingest_documents.py
research_db/: chroma.sqlite3
retrieval/: self_query_retriever.py
scripts/: build_hypothetical_q_store.py  semantic_chunks.py
services/: bot.py
tests/: conftest.py  test_config.py  test_evaluation.py  test_guardrails.py  test_integration.py  test_routing.py
ui/: ui.py
