[project]
name = "advance-rag-project"
version = "1.0.0"
description = "Production-grade Advanced RAG system for nutritional disorder guidance using LangChain, LangGraph, and Mem0"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["rag", "langchain", "langgraph", "nutrition", "chatbot", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chromadb==0.5.3",
    "groq>=0.30.0",
    "langchain==0.2.7",
    "langchain-community==0.2.7",
    "langchain-experimental==0.0.62",
    "langchain-huggingface==0.0.3",
    "langchain-openai==0.1.14",
    "langgraph>=0.4.5",
    "lark==1.1.9",
    "llama-index-core>=0.12.49",
    "llama-index-llms-langchain>=0.6.1",
    "llama-index-readers-file>=0.4.11",
    "llama-parse==0.5.11",
    "mem0ai>=0.1.114",
    "openai==1.55.3",
    "python-dotenv==1.0.1",
    "sentence-transformers==3.0.1",
    "streamlit>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
nutrition-rag = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/advance-rag-project"
Documentation = "https://github.com/yourusername/advance-rag-project#readme"
Repository = "https://github.com/yourusername/advance-rag-project"
Issues = "https://github.com/yourusername/advance-rag-project/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "agents*", "services*", "ui*", "parsers*", "pipeline*", "retrieval*", "scripts*", "agent_workflow*", "mem0ai*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in defaults
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "slow: Tests that take a long time to run",
]
